# elevation-api-public

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  Cargo.toml  Dockerfile-Builder  Dockerfile-Server  Makefile  README.md  build-images.sh  download_data.py  fabfile.py  tif_to_nc.py
beanstalk/: Dockerrun.aws.json
beanstalk/.ebextensions/: http_redirect.config  storage-efs-mountfilesystem.config
elevation-lib/: Cargo.toml
elevation-lib/src/: json_structs.rs  lib.rs
elevation-lib/src/elevation/: mod.rs
elevation-lib/src/tests/: mod.rs
lambda-elevation/: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  package-lock.json  package.json  serverless.yml
lambda-elevation/src/: lib.rs
processed_netcdf_files/: summary.json
raw_download_tiffs/: gt30antarcps.tif  gt30e020n40.tif  gt30e020n90.tif  gt30e020s10.tif  gt30e060n40.tif  gt30e060n90.tif  gt30e060s10.tif  gt30e060s60.tif  gt30e100n40.tif  gt30e100n90.tif  gt30e100s10.tif  gt30e120s60.tif  gt30e140n40.tif  gt30e140n90.tif  gt30e140s10.tif  gt30w000s60.tif  gt30w020n40.tif  gt30w020n90.tif  gt30w020s10.tif  gt30w060n40.tif  gt30w060n90.tif  gt30w060s10.tif  gt30w060s60.tif  gt30w100n40.tif  gt30w100n90.tif  gt30w100s10.tif  gt30w120s60.tif  gt30w140n40.tif  gt30w140n90.tif  gt30w140s10.tif  gt30w180n40.tif  gt30w180n90.tif  gt30w180s10.tif  gt30w180s60.tif
src/: json_structs.rs  main.rs  utils.rs
src/elevation/: mod.rs
src/tests/: mod.rs
src/tests/data/: n58e104.nc
templates/: index.html  index.tera  index.tera.html
