[package]
name = "elevation-api"
version = "0.1.0"
authors = ["Miles Granger <miles59923@gmail.com>"]

[dependencies]
log = "0.4.0"
clap = "2.32.0"
env_logger = "0.5.12"
ndarray = "0.11.1"
netcdf = {git = "https://github.com/mhiley/rust-netcdf.git"}
glob = "0.2.11"
serde_json = "1.0.11"
serde = "1.0.29"
serde_derive = "1.0.29"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = {features = ["json", "tera_templates"], version = "*", default-features = false}