[package]
name = "elevation-api"
version = "1.0.11"
authors = ["Miles Granger <miles59923@gmail.com>"]

[dependencies]
log = "0.4"
clap = "2.32"
env_logger = "0.5"
ndarray = "0.11"
netcdf = {git = "https://github.com/mhiley/rust-netcdf.git"}
glob = "0.2"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
actix-web = "0.7"
actix = "0.7"
tera = "0.11"