[package]
name = "serverless-crowbar"
version = "0.1.0"
publish = false

[lib]
crate-type = ["cdylib"]
name = "lambda"

[dependencies]
serde_json = "1.0"
cpython = "0.1"
crowbar = "0.2"
python3-sys = { version = "0.1.3", features = ["python-3-4"], optional = true }
elevation-lib = { path = "elevation-lib" }